# playground

./: .editorconfig  .gitattributes  .gitignore  .prettierignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pytest.ini
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SUPPORT  SUPPORT.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  task.md
.github/configs/: default-typescript-eslint.config.mjs
.github/scripts/: discover_projects.py  run_ts_format.sh  run_ts_lint.sh  run_ts_tests.sh  run_ts_typecheck.sh  ts_quality_common.sh
.github/workflows/: cd.yml  ci.yml  template-python.yml  template-typescript.yml
configs/pre-commit/: README.md  default-pre-commit-config.yml
java/legacy/: README.md
python/: conftest.py
python/auto_lib_test/: main.py
python/backup/: backup.py  pyproject.toml
python/backup/tests/: test_backup.py
python/check/: .checkignore.default.json  check.py
python/check/tests/: test_check.py
python/git_commits/: print_commits.py  pyproject.toml
python/git_commits/tests/: test_print_commits.py
python/github_api_test/: api_test.py  requirements.txt
python/github_stats/: README.md  pyproject.toml  stats.py
python/github_stats/tests/: test_api.py  test_stats.py
python/leetcode_simple_test_template/: README.md  solution.py  test_solution.py
python/multiply_with_addition/: main.py
python/nogil_benchmark/: benchmark.py  pyproject.toml  start.cmd
python/paint2d/: README.md  main.py  menu.py  pyproject.toml  requirements.txt  tool.py  tool_circle.py  tool_clear.py  tool_eraser.py  tool_fill.py  tool_pen.py  tool_pencil.py  tool_rectangle.py  tools_menu.py
python/paint2d/tests/: conftest.py  test_main.py
python/repo_checker/: check.py  pyproject.toml  repo_checker.py
python/repo_checker/tests/: test_check.py
python/sync/: sync.py
python/sync/tests/: test_sync.py
python/template/: README.md  pyproject.toml
python/template/tests/: test_example.py
shell/bash/: ball.sh  banner.sh  blink.sh  matrix.sh  progress.sh  rainbow.sh  spinner.sh  sysinfo.sh  typing.sh
shell/cmd/: banner.cmd  matrix.cmd  progress.cmd  rainbow.cmd  spinner.cmd  sysinfo.cmd
shell/matrix/: matrix.cmd
shell/powershell/: banner.ps1  matrix.ps1  progress.ps1  rainbow.ps1  spinner.ps1  sysinfo.ps1
templates/gitignore/androidstudio/: .gitignore
templates/gitignore/eclipse/: .gitignore
templates/gitignore/general/: .gitignore
templates/gitignore/visualstudiocode/: .gitignore
templates/leetcode/: README.md
templates/markdown/: readme_basic.md  readme_header1.md  readme_private.md
templates/markdown/readme/: basic_readme.md  private_readme.md
typescript/cache/: cache.test.ts  cache.ts  package-lock.json  package.json
typescript/electron_obfuscated_template/: .gitignore  obfuscator.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
typescript/electron_project/: README.md  eslint.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts
typescript/electron_vite_template/: .prettierignore  README.md  eslint.config.js  package-lock.json  tsconfig.json  vite.renderer.config.ts
typescript/nodejs_backend/: README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.build.json  tsconfig.json  vitest.config.ts
typescript/nodejs_template/: .gitignore  .prettierrc  README.md  eslint.config.js  package.json  tsconfig.json
typescript/password_checker/: .gitignore  package-lock.json  package.json  pnpm-workspace.yaml  validator.test.ts  validator.ts
(+109 files in other folders)
