[project]
name = "github_stats"
version = "1.0.0"
description = "GitHub Stats project"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "python-dotenv>=1.2.2",
  "requests>=2.34.2",
  "types-requests>=2.33.0.20260518",
]

[dependency-groups]
dev = ["pytest>=9.0.3", "ruff>=0.11.9", "mypy>=1.15.0"]

[tool.uv]
default-groups = ["dev"]
# Ignore all releases published in the last 7 days
exclude-newer = "7 days"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "ASYNC", "RUF", "S"]

[tool.mypy]
strict = true
