[project]
name = "paint2d"
version = "1.0.0"
description = "Paint2d project"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["pygame-ce>=2.5.7"]

[dependency-groups]
dev = ["pytest>=9.0.3", "ruff>=0.11.9", "mypy>=1.15.0"]

[tool.uv]
# Ignore all releases published in the last 7 days
exclude-newer = "7 days"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "ASYNC", "RUF", "S"]

[tool.mypy]
strict = true
